infotv/frontend/styles/desucon/less/slides.less
#content {
    font-size: 3vmax;
    position: fixed;
    left: 3vmax;
    top: 3vmax;
    right: 3vmax;
    bottom: 3vmax;
    p {
        margin: 0
    }
}

.slide {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.image-slide {
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center center;
}

.slide-enter {
    backface-visibility: visible !important;
    animation-name: fadeInLeft;
    .animated();
}

.slide-leave {
    animation-name: fadeOut;
    .animated();
}

.nownext-slide {
    table {
        width: 100%;
        border-collapse: collapse;
    }

    td {
        font-size: 2vmax;
        padding: 0.2em;
    }

    tr:nth-child(2n) {
        background: rgba(0,0,0,0.5);
    }

    tr:nth-child(2n+1) {
        background: rgba(0,0,0,0.3);
    }

    .times {
        font-weight: bold;
        padding-right: 0.25em
    }

    .soon .times {
        color: orange;
    }

    .ntitle {
        opacity: 0.75;
        font-size: 80%
    }
}

.nownext-single-slide {
    margin: 0 2vmax;

    .loc {
        text-align: center;
        font-weight: bold;
    }

    .ntitle, hr {
        opacity: 0.75;
    }

    hr {
        margin: 3vmax 0;
    }

    .times, .title {
        margin-left: 2vmax;
    }

    .times {
        font-weight: bold;
    }

    .soon .times {
        color: orange;
    }
}

body.tall {
    .ntitle {
        font-size: 100%;
    }

    .nownext-slide table {
        margin-top: 1em;
    }

    .nownext-slide td {
        font-size: 2.5vmax;
    }

    tr:nth-child(2n+1) {
        background: rgba(0,0,0,0.0);
    }

    .nownext-table-row {
        display: flex;
        justify-content: space-between;
        flex-direction: column;
        border-bottom: 1px solid rgba(255, 255, 255, 0.8);
        padding-bottom: 0.25em;
    }

    .nownext-table-cell {
        padding-bottom: 0;
        display: block;
        &.loc {
            color: rgba(90, 158, 91, 0.7);
        }
    }
}

.text-slide {
    :first-child { margin-top: 0; }
}

.clock-placeholder {
    float: right;
    width: 10vmax;
    height: 7vmax;
}

.anime-slide {
    text-align: center;
    font-size: 3vmax;
    .container {
        display: flex;
        justify-content: space-around;
        flex-wrap: wrap;

        .now, .next {
            width: 45vmax;
            .header {
                font-size: 2vmax;
                margin-top: 2vmax;
            }
            .name {
                margin-top: 1vmax;
                margin-bottom: 3vmax;
            }
            img {
                max-width: 25vmax;
                max-height: 25vmax;
                margin-bottom: 2vmax;
            }
            .text {
                font-size: 2vmax;
                margin-bottom: 2vmax;
            }
        }
    }
}

